--- a/app/Resources/views/inc/header.html.twig
+++ b/app/Resources/views/inc/header.html.twig
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">NFQ</a>
+            <a class="navbar-brand" href="/">NFQ</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -17,6 +17,21 @@
                 <li><a href="/list">List</a></li>
                 <li><a href="/create">Create</a></li>
             </ul>
+
+
+            {% if is_granted('ROLE_USER') %}
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="/logout">Logout</a></li>
+                </ul>
+            {% else %}
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="/register">Register</a></li>
+                    <li><a href="/login">Login</a></li>
+                </ul>
+            {% endif %}
+
+
+
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
