--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -1,19 +1,14 @@
 {% extends "::base.html.twig" %}
 
-{% block title %}Homepage - {{ parent() }}{% endblock %}
+{% block title %}NFQ AKADEMIJA{% endblock %}
 
 {% block stylesheets %}
     <link href="https://fonts.googleapis.com/css?family=Lato:100" rel="stylesheet" type="text/css">
     {{ parent() }}
     <style>
-        body {
-            margin: 0;
-            padding: 0;
+        .title {
             font-weight: 100;
             font-family: 'Lato';
-        }
-
-        .title {
             margin: 20px auto;
             text-align: center;
             font-size: 96px;
