Added createdBy, titles

--- a/src/AppBundle/Resources/views/Home/view.html.twig
+++ b/src/AppBundle/Resources/views/Home/view.html.twig
@@ -1,5 +1,7 @@
 {% extends '::base.html.twig' %}
 
+{% block title %}NFQ AKADEMIJA - VIEW{% endblock %}
+
 {% block stylesheets %}
     {{ parent() }}
     <style>
