--- a/src/AppBundle/Resources/views/Home/create.html.twig
+++ b/src/AppBundle/Resources/views/Home/create.html.twig
@@ -1,5 +1,7 @@
 {% extends '::base.html.twig' %}
 
+{% block title %}NFQ AKADEMIJA - CREATE{% endblock %}
+
 {% block stylesheets %}
     {{ parent() }}
     <style>
@@ -25,5 +27,4 @@
 
     {{ form_widget(form) }}
     {{ form_end(form) }}
-
 {% endblock %}
