--- a/src/AppBundle/Resources/views/Home/list.html.twig
+++ b/src/AppBundle/Resources/views/Home/list.html.twig
@@ -1,5 +1,7 @@
 {% extends '::base.html.twig' %}
 
+{% block title %}NFQ AKADEMIJA - LIST{% endblock %}
+
 {% block stylesheets %}
     {{ parent() }}
     <style>
@@ -12,9 +14,6 @@
             text-overflow: ellipsis;
             white-space: nowrap;
         }
-        td.buttons {
-            width: 15%;
-        }
     </style>
 
 {% endblock %}
@@ -22,17 +21,19 @@
 {% block body %}
     <table class="table table-striped">
         <tr>
-            <th>#</th>
+            <th style="width: 5%">#</th>
             <th>Title</th>
             <th>Content</th>
-            <th style="max-width: 100px">Actions</th>
+            <th style="width: 15%">Created By</th>
+            <th style="width: 15%">Actions</th>
         </tr>
         {% for post in posts %}
             <tr>
-                <td>{{ post.id }}</td>
+                <td class="cell">{{ post.id }}</td>
                 <td class="cell">{{ post.title }}</td>
                 <td class="cell">{{ post.content }}</td>
-                <td class="buttons">
+                <td class="cell">{{ post.createdBy }}</td>
+                <td class="cell">
                     <a href="view/{{ post.id }}" class="btn btn-primary btn-xs" role="button">View</a>
                     <a href="delete/{{ post.id }}" class="btn btn-danger btn-xs" role="button">Delete</a>
                 </td>
