--- a/src/AppBundle/Resources/views/Home/login.html.twig
+++ b/src/AppBundle/Resources/views/Home/login.html.twig
@@ -9,18 +9,18 @@
     {% endif %}
 
     <form action="{{ path('login') }}" method="post">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}" />
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="_password" />
+        <div class="form-group">
+            <label class="control-label" for="username">Username</label>
+            <input id="username" name="_username" class="form-control" type="text" value="{{ last_username }}" />
+        </div>
+        <div class="form-group">
+            <label class="control-label" for="password">Password</label>
+            <input type="password" id="password" class="form-control" name="_password" />
+        </div>
+        <div class="form-group">
+            <button type="submit" class="btn-default btn">Login</button>
+        </div>
 
-        {#
-            If you want to control the URL the user
-            is redirected to on success (more details below)
-            <input type="hidden" name="_target_path" value="/account" />
-        #}
-
-        <button type="submit">login</button>
     </form>
 {% endblock %}
