--- a/src/AppBundle/Resources/views/Home/register.html.twig
+++ b/src/AppBundle/Resources/views/Home/register.html.twig
@@ -1,5 +1,6 @@
 {% extends '::base.html.twig' %}
 
+{% block title %}NFQ AKADEMIJA - REGISTER{% endblock %}
 
 {% block body %}
     {{ form_start(form) }}
