--- a/src/AppBundle/Resources/views/Home/login.html.twig
+++ b/src/AppBundle/Resources/views/Home/login.html.twig
@@ -5,7 +5,7 @@
 
 {% block body %}
     {% if error %}
-        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
     <form action="{{ path('login') }}" method="post">
