Added eventSubscriber and controller

--- a/src/SandboxBundle/Resources/views/Default/index.html.twig
+++ b/src/SandboxBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,5 @@
-Hello World!
+<b>TeddyBear HEAD:</b><br>
+TeddyBear has {{ teddyBear.head.eyeCount }} eyes, a {{ teddyBear.head.noseShape }} nose and it is {{ teddyBear.head.faceExpression }}.<br><br>
+<b>TeddyBear BODY:</b><br>
+TeddyBear has a {{ teddyBear.body.bodyColor }} body, {{ teddyBear.body.armCount }} arms and {{ teddyBear.body.legCount }} legs.<br><br>
+<font style="font-size: 30px">This is my TeddyBear!</font>
