--- a/src/AppBundle/Resources/style/main.scss
+++ b/src/AppBundle/Resources/style/main.scss
@@ -1,2 +1,34 @@
-//bootstrap
-@import "./node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+@media (max-width: 768px) {
+  .container-fluid {
+    padding: 0;
+  }
+  .content {
+    padding: 15px 0 0 0;
+  }
+  .list-group-item {
+    padding: 10px;
+  }
+}
+
+.result-input {
+  min-width: 100px;
+  max-width: 300px;
+}
+.result-input input {
+  padding: 0 2px 0 2px;
+}
+
+#result-insert-alert {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 22px;
+  font-weight: bold;
+  z-index: 1000;
+}
+
+
+
+
