--- a/src/AppBundle/Resources/views/Student/view.html.twig
+++ b/src/AppBundle/Resources/views/Student/view.html.twig
@@ -13,7 +13,7 @@
 					<h3 class="box-title">Pagrindinė informacija</h3>
 				</div>
 				<div class="box-body">
-					<img src="{{ asset('images/default_user_image.png') }}" class="img-rounded img-profile"/>
+					<img src="{{ asset(constant('AppBundle\\GlobalConstants::PROFILE_IMAGE_DEFAULT')) }}" class="img-rounded img-profile"/>
 					<div class="row">
 						<h4>{{ student.name }}</h4>
 					</div>
